Balance MD download shelf button padding.

Bug: 767226
Change-Id: I66c219d6a3a7aa7c0a94663dbad0b0c221fdbb3f
Reviewed-on: https://chromium-review.googlesource.com/753758
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Sidney San Martín <sdy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#514122}
Former-commit-id: ac1a675f366123043e11d737ce1661cbbff4af93